Use CSS pagination options when printing. - Avoid pagebreaks after headers - Avoid pagebreaks inside images and wikitables - Avoid less than 3 lines at the end of beginning of paragraphs.
Works on Opera, and partly on Firefox.

--- a/skins/common/commonPrint.css
+++ b/skins/common/commonPrint.css
@@ -348,3 +348,15 @@ table.wikitable {
 a.sortheader {
 	margin: 0px 0.3em;
 }
+
+/* Some pagination options */
+.wikitable, .thumb, img {
+	page-break-inside: avoid;
+}
+h2, h3, h4, h5, h6, h7 {
+	page-break-after: avoid;
+}
+p {
+	widows: 3;
+	orpans: 3;
+}
